# aiosql

./: .buildinfo  .editorconfig  .flake8  .gitignore  .travis.yml  LICENSE  Makefile  README.md  advanced-topics.html  contributing.html  database-driver-adapters.html  defining-sql-queries.html  dev-requirements-mysql.txt  dev-requirements.in  dev-requirements.txt  dockerfile.mariadb  dockerfile.mysql  genindex.html  getting-started.html  index.html  mkdocs.yml  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tasks.py  todo.html  tox.ini  versions.html
.doctrees/: advanced-topics.doctree  contributing.doctree  database-driver-adapters.doctree  defining-sql-queries.doctree  environment.pickle  getting-started.doctree  index.doctree  todo.doctree  versions.doctree
.doctrees/pydoc/: aiosql.adapters.doctree  aiosql.doctree  modules.doctree
.github/scripts/: docs.sh  package-build.sh
.github/workflows/: aiosql-package.yml  deploy-pages.yml
_sources/: contributing.rst.txt  database-driver-adapters.rst.txt  defining-sql-queries.rst.txt  getting-started.rst.txt  index.rst.txt  versions.rst.txt
_sources/pydoc/: aiosql.adapters.rst.txt  aiosql.rst.txt  modules.rst.txt
_static/: documentation_options.js
aiosql/: __init__.py  aioctxlib.py  aiosql.py  db.py  exceptions.py  patterns.py  queries.py  query_loader.py  record.py  types.py  utils.py
aiosql/adapters/: __init__.py  adbc.py  ageneric.py  aiosqlite.py  apsw.py  apyformat.py  asyncpg.py  duckdb.py  generic.py  mysql.py  pg8000.py  psycopg.py  psycopg2.py  pyformat.py  sqlite3.py
aiosql/loaders/: aiosqlite.py  asyncpg.py  base.py  psycopg2.py  sqlite3.py
docker/: .gitignore  Makefile  README.md  docker-compose.yml  dockerfile.python-db  dockerfile.python-mariadb  dockerfile.python-mysql  dockerfile.python-postgres
docs/: advanced-topics.md  api.md  conf.py  contributing.md  database-driver-adapters.md  defining-sql-queries.md  defining_queries.rst  driver_adapters.rst  getting-started.md  getting-started.rst  getting_started.rst  index.md  index.rst  install.rst  query_loaders.rst  upgrading.rst  usage.rst
docs/_templates/: source_code.html
docs/source/: advanced-topics.rst  conf.py  contributing.rst  database-driver-adapters.rst  defining-sql-queries.rst  getting-started.rst  index.rst  todo.rst  versions.rst
example/: example.py  exampleblog.db  greetings.py  greetings.sh  greetings.sql  greetings_async.py  greetings_create.sql  greetings_cursor.py  observe_query.py  pg_execute_values.py
example/sql/: create_schema.sql
example/sql/blogs/: blogs.sql
example/sql/users/: users.sql
pydoc/: aiosql.adapters.html  aiosql.html  modules.html
scripts/: test.sh
sphinx_docs/: defining_queries.rst  driver_adapters.rst  getting_started.rst  index.rst  sync_vs_async.rst
sphinx_docs/_templates/: source_code.html
tests/: Makefile  conf_duckdb.py  conf_mssql.py  conf_mysql.py  conf_pgsql.py  conf_schema.py  conf_sqlite.py  conftest.py  pytest.ini  run_tests.py  test_adbc_sqlite.py  test_aiosqlite.py  test_apsw.py  test_apsycopg3.py  test_asyncpg.py  test_common.py  test_db.py  test_db.sql  test_duckdb.py  test_loading.py  test_mariadb.py  test_myco.py  test_mysqldb.py  test_patterns.py  test_pg8000.py  test_psycopg.py  test_psycopg2.py  test_psycopg3.py  test_pygresql.py  test_pymssql.py  test_pymssql_INIT.py  test_pymssql_WIP.py  test_pymysql.py  test_sqlite3.py  utils.py  wait.py
tests/blogdb/data/: blogs_data.csv  users_data.csv
tests/blogdb/sql/blogs/: blogs.sql  blogs_duckdb.sql  blogs_ms.sql  blogs_mysqldb.sql  blogs_pg.sql  blogs_sqlite.sql
tests/blogdb/sql/blogs/du/: blogs.sql
tests/blogdb/sql/blogs/li/: blogs.sql
tests/blogdb/sql/blogs/ms/: blogs.sql
tests/blogdb/sql/blogs/my/: blogs.sql
tests/blogdb/sql/blogs/my/pymysql/: blogs.sql
tests/blogdb/sql/blogs/pg/: blogs.sql
tests/blogdb/sql/blogs/pg/pg8000/: blogs.sql
tests/blogdb/sql/comments/: comments_duckdb.sql  comments_ms.sql  comments_pg.sql  comments_sqlite.sql
tests/blogdb/sql/comments/du/: comments.sql
tests/blogdb/sql/comments/li/: comments.sql
tests/blogdb/sql/comments/ms/: comments.sql
tests/blogdb/sql/comments/my/: comments.sql
tests/blogdb/sql/comments/pg/: comments.sql
tests/blogdb/sql/misc/: misc.sql
tests/blogdb/sql/misc/du/: misc.sql
tests/blogdb/sql/misc/li/: misc.sql
tests/blogdb/sql/misc/ms/: misc.sql
tests/blogdb/sql/misc/my/: misc.sql
tests/blogdb/sql/misc/my/pymysql/: misc.sql
tests/blogdb/sql/misc/pg/: misc.sql
tests/blogdb/sql/misc/pg/pg8000/: misc.sql
tests/blogdb/sql/users/: users.sql  users_apsw.sql  users_duckdb.sql
tests/blogdb/sql/users/du/: users.sql
tests/blogdb/sql/users/li/: users.sql
tests/blogdb/sql/users/ms/: users.sql
tests/blogdb/sql/users/pg/pg8000/: users.sql
tests/f1db/data/: drivers_data.csv
tests/f1db/sql/: drivers.sql
