[metadata]
name = aiosql
version = 3.3.0
author = William Vaughn
author_email = vaughnwilld@gmail.com
description = Simple SQL in Python
license = BSD 3-Clause License
long_description = Simple SQL in Python, please see the `documentation <https://nackjicholson.github.io/aiosql/>`__
url = https://github.com/nackjicholson/aiosql
project_urls =
    Bug Tracker = https://github.com/nackjicholson/aiosql/issues
    Docs = https://nackjicholson.github.io/aiosql/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    contextlib2 >=21.6.0
    typing-extensions >=3.7.4,<4

[options.packages.find]
exclude =
    tests
