[metadata]
name = aiosql
version = 7.2
author = William Vaughn et al.
author_email = vaughnwilld@gmail.com
description = Simple SQL in Python
license = BSD 2-Clause License
long_description = Simple SQL in Python, please see the `documentation <https://nackjicholson.github.io/aiosql/>`__
url = https://github.com/nackjicholson/aiosql
project_urls =
    Bug Tracker = https://github.com/nackjicholson/aiosql/issues
    Docs = https://nackjicholson.github.io/aiosql/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = true
# TODO switch to importlib.metadata with Python >= 3.8
install_requires = setuptools

[options.package_data]
aiosql = py.typed

[options.packages.find]
exclude =
    tests
